...
    <string name="sport_any_teacher">Любой преподаватель</string>
    <string name="sport_any_time">Любое время</string>
    <string name="sport_status_auto_sign_success">Автозапись сработала</string>
    <string name="sport_status_signed">Вы записаны</string>
    <string name="sport_status_sign_failed">Записать не удалось</string>
    <string name="sport_status_not_signed">Не записаны</string>
    <string name="sport_friend_signed">Записан</string>
    <string name="sport_friend_not_signed">Не записан</string>
    <string name="sport_cancel_booking_question">Отменить запись на это занятие?</string>
    <string name="sport_cancel_booking_action">Отменить запись</string>
    <string name="sport_lesson_sign_out">Отписаться</string>
    <string name="sport_lesson_unavailable">Недоступно</string>


...
    <string name="sport_registration_expired">Срок заявки истёк</string>
    <string name="sport_registration_cancelled">Заявка отменена</string>
    <string name="sport_card_queue">Автозапись · %1$d из %2$d</string>
    <string name="sport_ratio">%1$d / %2$d</string>
    <string name="sport_queue_place">Место в очереди</string>
    <string name="sport_queue_attempts">Запросы на запись</string>
    <string name="sport_queue_created">Заявка создана</string>
    <string name="sport_queue_last_request">Последний запрос</string>
    <string name="sport_queue_completed">Запись выполнена</string>
    <string name="sport_queue_cancelled">Заявка отменена</string>
    <string name="sport_queue_expired">Срок истёк</string>
    <string name="sport_queue_future_hint">Попробуем записать, когда занятие появится в My ITMO.</string>
    <string name="sport_queue_free_hint">Попробуем записать, когда освободится место.</string>
    <string name="sport_prediction_hint">Запишем, если занятие выйдет с теми же условиями.</string>
    <string name="sport_friends_count_label">Друзья · %1$d</string>
    <string name="sport_lesson_prediction">Прогноз</string>
    <string name="sport_card_cancel_auto">Отменить</string>
    <string name="sport_booking_conditions">Условия записи</string>
    <string name="sport_booking_allowed">Можно записаться</string>
    <string name="sport_booking_wait">Можно ждать место</string>
    <string name="sport_booking_wait_place">Автозапись, когда освободится место</string>
    <string name="sport_booking_no_bypass">Записаться нельзя</string>
    <string name="sport_booking_no_bypass_hint">Автозапись тут не поможет</string>
    <string name="sport_booking_prediction_rules">Ограничения прошлого занятия</string>
    <string name="sport_booking_warning">Пересечение с парой</string>
    <string name="sport_booking_warning_hint">Записаться всё равно можно</string>
    <string name="sport_booking_auto_checks">Нужно подключение к ITMO.Widgets</string>
    <string name="sport_booking_future_checks">Нужен свободный лимит автозаписи за 30 дней</string>
    <string name="sport_rule_time_conflict">На это время запись уже есть</string>
    <string name="sport_rule_daily_limit">Достигнут лимит на день</string>
    <string name="sport_rule_weekly_limit">Достигнут лимит на неделю</string>
    <string name="sport_rule_credit">Набраны баллы для зачёта</string>
    <string name="sport_rule_selection">Не пройден отбор</string>
    <string name="sport_rule_externat">Только для экстерната</string>
    <string name="sport_rule_health">Не та группа здоровья</string>
    <string name="sport_rule_started">Занятие уже началось</string>
    <string name="sport_rule_unknown">Ограничение My ITMO</string>
    <string name="sport_booking_uncertain">My ITMO не разрешил запись</string>
    <string name="sport_booking_late_auto">До начала меньше часа</string>
    <string name="sport_booking_late_auto_hint">Нужно подтвердить позднюю запись</string>
    <string name="sport_card_today">Сегодня</string>
    <string name="sport_card_tomorrow">Завтра</string>
...
        <item quantity="many">Свободных мест</item>
        <item quantity="other">Свободных места</item>
    </plurals>
    <string name="sport_capacity_none">нет</string>
    <string name="sport_capacity_card">Занято %1$d/%2$d</string>
    <string name="sport_prediction_matching">Тот же преподаватель и время</string>
    <string name="sport_prediction_waiting">Ждём расписание</string>

    <string name="spoiler_crop_title">Спойлер</string>
    <string name="spoiler_crop_done">Готово</string>
    <string name="spoiler_crop_rotate">Повернуть</string>

    <string name="widget_preview_title">Пример виджета</string>
...
